--- a/ShaunCode(Property Value).ipynb
+++ b/ShaunCode(Property Value).ipynb
@@ -57,11 +57,11 @@
     "\n",
     "#Allegheny County   Property Assessments Parcel Data   321MB\n",
     "#https://data.wprdc.org/datastore/dump/518b583f-7cc8-4f60-94d0-174cc98310dc\n",
-    "data_raw_value = pd.read_csv(\"518b583f-7cc8-4f60-94d0-174cc98310dc.csv\")\n",
+    "data_raw_value = pd.read_csv(\"https://data.wprdc.org/datastore/dump/518b583f-7cc8-4f60-94d0-174cc98310dc\")\n",
     "\n",
     "#Allegheny County   OCT-2020 Property Assessments Parcel Data   410MB\n",
     "#https://data.wprdc.org/dataset/2b3df818-601e-4f06-b150-643557229491/resource/f2b8d575-e256-4718-94ad-1e12239ddb92/download/assessments.csv\n",
-    "data_raw_nID = pd.read_csv(\"assessments.csv\")"
+    "data_raw_nID = pd.read_csv(\"https://data.wprdc.org/dataset/2b3df818-601e-4f06-b150-643557229491/resource/f2b8d575-e256-4718-94ad-1e12239ddb92/download/assessments.csv\")"
    ]
   },
   {
